--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create": "node db.js createTables"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-pg-simple": "^6.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "passport": "^0.4.1"
+    "make-runnable": "^1.3.6",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pg": "^7.15.1"
   }
 }
